refactor: use camelCase

--- a/testdata/override/squadron.override.yaml
+++ b/testdata/override/squadron.override.yaml
@@ -6,7 +6,7 @@ squadron:
       builds:
         default:
           # append new element to array
-          build_arg:
+          buildArg:
             - "bar=baz"
             - "baz=baz"
     # override backend
