--- a/testdata/bake/squadron.yaml
+++ b/testdata/bake/squadron.yaml
@@ -14,4 +14,5 @@ squadron:
       bakes:
         default:
           tags: [ 'storefinder/backend:${TAG}' ]
+          noCacheFilter: [ nocache ]
 
