--- a/testdata/override/snapshop-config.yaml
+++ b/testdata/override/snapshop-config.yaml
@@ -8,7 +8,7 @@ squadron:
         version: 0.0.1
       builds:
         default:
-          build_arg:
+          buildArg:
           - foo=foo
           - bar=bar
           - bar=baz
