--- a/testdata/bake/snapshop-config.yaml
+++ b/testdata/bake/snapshop-config.yaml
@@ -18,5 +18,7 @@ squadron:
         default:
           tags:
           - storefinder/backend:${TAG}
+          secret:
+          - id: GITHUB_TOKEN
           noCacheFilter:
           - nocache
