--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,19 +20,14 @@ updates:
 
   - package-ecosystem: gomod
     open-pull-requests-limit: 1
-    commit-message: { prefix: chore(deps) }
+    commit-message: { prefix: security(deps) }
     directories: [ '**/*' ]
     schedule:
-      day: sunday
-      interval: weekly
+      interval: daily
       timezone: Europe/Berlin
     groups:
       security:
         applies-to: security-updates
-        update-types: [ minor, patch ]
-        patterns: [ '*' ]
-      updates:
-        applies-to: version-updates
         update-types: [ minor, patch ]
         patterns: [ '*' ]
     ignore:
